--- a/05_Mineria_De_Datos/Tarea3/Tarea3.Rmd
+++ b/05_Mineria_De_Datos/Tarea3/Tarea3.Rmd
@@ -35,14 +35,15 @@ library(reshape2)
 
 # Entendimiento del negocio
 
+El problema a evaluar consiste en identificar patrones o caracteristicas en común de los miembros del cantón #21 de San José y basado en estás caracteristicas crear grupos de trabajo para sacar adelante los proyectos de interés del cantón.
+
 ## Objetivos de minería de datos 
 
-*	Identificar los 3 clústers de datos más comunes entre los miembros de la comunidad.
-*	Determinar las 3 caracteristicas más comunes entre los miembros de la comunidad para la participación en grupos.
+*	Identificar las 3 mejores reglas que describen que atributos suelen reunir determinados miembros de la comunidad.
 
 ## Criterios de éxito desde la perspectiva de minería de datos
 
-* Evaluar la confianza del modelo priori con el fin de validar que la confianza de las reglas seleccionadas sea mayor al 90%.
+* Evaluar la confianza del modelo a priori con el fin de validar que la confianza de las reglas seleccionadas sea mayor al 90%.
 
 #	Entendimiento de los datos
 
@@ -62,46 +63,40 @@ kable(atributos[,0:3])
 ## Verificación de la calidad de datos
 
 Para la evaluación de la calidad de los datos, se emplea la función summary para identificar la presencia de valores nulos, así como valores minimos y máximos de las variables númericas a fin de validar,
-si a simple vista es posible encontrat outliers o valores fuera de rango, como valores negativos.
+si a simple vista es posible encontrar outliers o valores fuera de rango, como valores negativos.
 
 ```{r warning=FALSE}
 dataset<-read.csv('Encuesta.csv', sep = ',',dec = '.')
 str(dataset)
 summary(dataset)
 ```
+ Como se puede observar en la tabla anterior, no se encontraron valores nulos ni negativos.
  
 #	Preparación de los datos 
 
-La primera conversión sería convertir las columnas Trabaja y Familia a un valor numérico para que sea consistente con las demás variables:
+La primera tranformación de los datos consiste en convertir las columnas Trabaja y Familia a un valor numérico para que sea consistente con las demás variables:
 
 ```{r warning=FALSE}
 # Lo convertimos usando as.integer(), pero debemos restarle 1 para que quede con dos valores 0 y 1, en vez de 1 y 2 como funciona al convertir de factor a entero
 dataset$Trabaja1 <- as.integer(dataset$Trabaja)-1
 dataset$Familia <- as.integer(dataset$Familia)-1
-dataset$Familia<- factor(dataset$Familia,labels=c("NoFamilia","SiFamilia"))
-dataset$Trabaja<- factor(dataset$Trabaja,labels=c("NoTrabaja","SiTrabaja"))
-dataset$Hobbies<- factor(dataset$Hobbies,labels=c("NoHobbies","SiHobbies"))
-dataset$Club_Social<- factor(dataset$Club_Social,labels=c("NoClub_Social","SiClub_Social"))
-dataset$Politica<- factor(dataset$Politica,labels=c("NoPolitica","SiPolitica"))
-dataset$Profesional<- factor(dataset$Profesional,labels=c("NoProfesional","SiProfesional"))
-dataset$Medioambiente<- factor(dataset$Medioambiente,labels=c("NoMedioambiente","SiMedioambiente"))
-dataset$Grupo_Apoyo<- factor(dataset$Grupo_Apoyo,labels=c("NoGrupo_Apoyo","SiGrupo_Apoyo"))
+dataset$Familia<- factor(dataset$Familia,labels=c("No","Si"))
+dataset$Trabaja<- factor(dataset$Trabaja,labels=c("No","Si"))
+dataset$Hobbies<- factor(dataset$Hobbies,labels=c("No","Si"))
+dataset$Club_Social<- factor(dataset$Club_Social,labels=c("No","Si"))
+dataset$Politica<- factor(dataset$Politica,labels=c("No","Si"))
+dataset$Profesional<- factor(dataset$Profesional,labels=c("No","Si"))
+dataset$Medioambiente<- factor(dataset$Medioambiente,labels=c("No","Si"))
+dataset$Grupo_Apoyo<- factor(dataset$Grupo_Apoyo,labels=c("No","Si"))
 str(dataset)
 ```
 
-Renombramos los valores de las variables Sexo y Tiempo_Comunidad:
+
+## Graficos de distribución de los valores de las variables que son factores:
+
+A fin de explorar la distribución de las variables se crean los siguientes gráficos. 
 
 ```{r warning=FALSE}
-dataset$Tiempo_comunidad<-revalue(dataset$Tiempo_comunidad,c("Corto"="Tiempo_comunidad_Corto","Largo"="Tiempo_comunidad_Largo","Medio"="Tiempo_comunidad_Medio"))
-dataset$Sexo<-revalue(dataset$Sexo,c("F"="Sexo_F","M"="Sexo_M"))
-summary(dataset)
-
-```
-
-Graficos de distribucion de los valores de las variables que son factores:
-
-```{r warning=FALSE}
-
 dataset_factors =dataset[,sapply(dataset, is.factor)]
 
 for (f_name in colnames(dataset[,sapply(dataset, is.factor)])){
@@ -139,7 +134,7 @@ dataset$Trabaja1 <- NULL
 
 ## Limpieza de los datos 
 
-Para asegurar el correcto funcionamiento del algoritmo, vamos a eliminar las filas que contengan valores nulos.
+Para asegurar el correcto funcionamiento del algoritmo, vamos a aplicar la función na.omit a fin de remover cualquier valor nulo, existe.
 
 ```{r warning=FALSE}
 dataset<- na.omit(dataset)
@@ -147,7 +142,7 @@ dataset<- na.omit(dataset)
 
 ## Construcción de nuevos datos (atributos) 
 
-Se crearon dos nuevas variables como el rango de edad y el timepo de respuesta para agrupar los datos
+Se crearon dos nuevas variables como el rango de edad y el tiempo de respuesta para agrupar los datos. Para ambas variables se crearon 3 subgrupos. Una vez creados estas nuevas variables se procede a eliminar las variables originales.
 
 ```{r warning=FALSE}
 dataset$Grupo_Edad<-discretize(dataset$Edad,method="frequency",breaks = 3, labels = c("Edad_Joven","Edad_Media","Edad_Mayor"))
@@ -157,71 +152,67 @@ dataset$Grupo_Tiempo_Respuesta<-discretize(dataset$Tiempo_Respuesta,method="freq
                                            labels = c("Tiempo_Respuesta_Rapida","Tiempo_Respuesta_Media","Tiempo_Respuesta_Lenta"))
 levels(dataset$Grupo_Tiempo_Respuesta)
 
+dataset$Edad <- NULL
+dataset$Tiempo_Respuesta <- NULL
+
 str(dataset)
 
 colnames(dataset)
 
 ```
+En el caso de edad estos grupos son: Edad_Joven (De 17 a 30 años), Edad_Media (30 a 43 años) y Edad_Mayor (43 a 57 años)
+
+En el caso de Tiempo_Respuesta los 3 subcojuntos son: Tiempo_Respuesta_Rapida de 2.01 a 4.56 minutos,Tiempo_Respuesta_Media de 4.56 a 7.24 minutos y Tiempo_Respuesta_Lenta de 7.24 a 10.15 minutos.
 
 ## Transformaciones aplicadas a los datos 
  
-(Si la preparación de los datos la realiza en un lenguaje de programación distinto a R, debe documentar los cambios o transformaciones aplicadas a los datos, aportando screenshots y agregándolos como imágenes en el documento RMarkdown.)
-
-En este caso todo el desarrollo de la tarea se realiza a través de R.
+En este caso todo el desarrollo de la tarea se realiza a través de R. El detalle de las modificaciones se encuentra en los apartados Preparación de los datos: Selección de los datos, Limpieza de los datos
+y Construcción de nuevos datos.
  
 #	Fase de modelado  
 
-(estas actividades debe realizarlas para cada conjunto de reglas generado) 
-
 ## Selección de técnicas (en este caso A priori)
+
+Para esta tarea se hace uso de la técnica A priori, tomando en consideración el conocimiento aprendido en clase y las instrucciones brindadas por la profesora para la creación de esta tarea.
 
 ## Construcción del modelo (en este caso serán conjuntos de reglas) 
 
-###	Selección de los parámetros 
+### Modelo 1
+####	Selección de los parámetros 
 
 Para la creación del primer conjunto de reglas se hace uso de todas originales (excepto Politica y  Club Social) a fin de explorar los resultados de las reglas generadas.
 
 ```{r warning=FALSE}
-todasvariables <- dataset[,1:10]
-transacciones<- ddply(dataset, c("Tiempo_Respuesta","Tiempo_comunidad","Sexo","Trabaja","Edad","Familia","Hobbies","Profesional","Medioambiente","Grupo_Apoyo"),function(dataset) paste(dataset$item,collapse = ','))
-
-#transacciones <- paste(dataset$Tiempo_Respuesta,dataset$Tiempo_comunidad,dataset$Sexo,dataset$Trabaja,
-#                       dataset$Edad,dataset$Familia,dataset$Hobbies,dataset$Club_Social,dataset$Politica,
-#                       dataset$Profesional,dataset$Medioambiente,dataset$Grupo_Apoyo,collapse=',')
-#dataset$Tiempo_Respuesta<-NULL
-#dataset$Edad<-NULL
-
 #transacciones <- col_concat(dataset,sep=",")
 transacciones<-as(dataset,Class = "transactions")
 head(transacciones)
  
  # se guardan los datos como archivo csv en formato transaccion
-write(transacciones,'transaccionesOR2.csv',sep=',')
-#write.csv(transacciones,'transaccionesOR2.csv',quote = FALSE)
+write(transacciones,'transaccionesv1.csv',sep=',')
+#write.csv(transacciones,'transaccionesv1.csv',quote = FALSE)
 
 ```
 
 
-#### Exploración de las transacciones
+##### Exploración de las transacciones
+
+Para explorar las transacciones creadas, se utiliza el comando summary, en el mismo es posible ver que los items más frecuentes son: Grupo_Apoyo=No, Profesional=No, Medioambiente=No, Hobbies=No y Familia=No
+
 ```{r}
 summary(transacciones)
 ```
 
-###	Ejecución (generación de reglas, eliminación de subconjuntos,etc) 
+####	Ejecución (generación de reglas, eliminación de subconjuntos,etc) 
 
-#### Generación de las reglas usando A priori
+##### Generación de las reglas usando A priori
 
+Vamos a utilizar un soporte del 0.1 (10%) para filtrar los items que tienen una baja frecuencia, es decir que tienen una baja frecuencia de aparición en la misma transacción. Igualmente utilizamos una confianza de 0.9 (90%) para incluir items con una alta probabilidad de ocurrencia.
 ```{r}
- # se generarn las reglas usando el algoritmo a priori, con un soporte del 1% y una confianza de 0.9 o 90%
-
-  reglas<- apriori(transacciones,parameter = list(supp=0.001,conf=0.9,maxlen=10))
+ # se generar las reglas usando el algoritmo a priori, con un soporte del 1% y una confianza de 0.9 o 90%
+  reglas<- apriori(transacciones,parameter = list(supp=0.1,conf=0.9,maxlen=10))
   
   inspect(reglas[1:10])
 
-   # Generar menos reglas
-  #reglas<- apriori(transacciones,parameter = list(supp=0.001,conf=0.8,maxlen=3))
-  #inspect(reglas[1:10])
- 
   # eliminar reglas que son subconjuntos de otras 
   subconjuntos<- which(colSums(is.subset(reglas,reglas))>1)
   
@@ -238,17 +229,17 @@ summary(transacciones)
 
 ```{r warning=FALSE}
 # se leerá el archivo como transacciones formato basket
- transacciones<- read.transactions('transaccionesOR2.csv',sep=',',format = 'basket')
+ transacciones<- read.transactions('transaccionesv1.csv',sep=',',format = 'basket')
  
 ```
-###	Descripción general de las reglas obtenidas (incluya al menos un gráfico) 
+####	Descripción general de las reglas obtenidas (incluya al menos un gráfico) 
 
-#### Visualización de las 3 mejores reglas (según confianza) - grafo
+##### Visualización de las 3 mejores reglas (según confianza) - grafo
 ```{r fig.align='center'}
    tresMejoresReglas<- head(mejoresReglas,n=3,by='lift')
    plot(tresMejoresReglas,method = 'graph',engine = 'htmlwidget')
 ```
-#### Visualización de  20 reglas - gráfico paracoord
+##### Visualización de  3 reglas - gráfico paracoord
 ```{r}
 # graficar 10 reglas individuales para observar lhs y rhs
   Top3<-head(mejoresReglas,n=3,by='confidence')
@@ -256,9 +247,9 @@ summary(transacciones)
 ```
 
 
-## Evaluación de los modelos 
+#### Evaluación de los modelos 
 
-###	Muestre e interprete las mejores 3 reglas de cada conjunto generado 
+#####	Muestre e interprete las mejores 3 reglas de cada conjunto generado 
 
 Las mejores reglas al utilizar todas las siguientes:
 
@@ -266,4 +257,60 @@ Las mejores reglas al utilizar todas las siguientes:
 inspect(Top3)
 ```
 
-La primera regla nos indica que si la persona tiene poco tiempo en la comunidad, tiene hobbies, pertenece a un grupo de apoyo, y respondió la encuesta en el grupo más largo, significa que la persona trabaja.
+
+### Modelo 2
+
+##### Generación de las reglas usando A priori
+
+Para el segundo modelo se utiliza un soporte más bajo de 0.02(2%), la confianza en 0.7 (70%) y el maxlen en 5, esto con el propósito de flexibilizar las restricciones del modelo, pero al mismo tiempo reducir el número de items empleadas por el algoritmo al generar las reglas, y asi comparar los resultados de ambos modelos
+
+```{r}
+ # se generarn las reglas usando el algoritmo a priori, con un soporte del 2% y una confianza de 0.7%
+
+  reglasv2<- apriori(transaccionesv2,parameter = list(supp=0.02,conf=0.7,maxlen=5))
+  
+  inspect(reglasv2[1:10])
+
+  # eliminar reglas que son subconjuntos de otras 
+  subconjuntosv2<- which(colSums(is.subset(reglasv2,reglasv2))>1)
+  
+  reglasFinalv2 <- reglasv2[-subconjuntosv2]
+  #inspect(reglasFinal[1:10])
+  
+  # se ordena por soporte y se observan las primeras 3 reglas
+  inspect(sort(reglasFinalv2,by='lift',decreasing = TRUE)[1:3])
+  
+  # se filtran las reglas con confianza superior a 0.25
+  mejoresReglasv2<- reglasFinalv2[quality(reglasFinalv2)$confidence>0.70]
+  
+```
+
+```{r warning=FALSE}
+# se leerá el archivo como transacciones formato basket
+ transaccionesv2 <- read.transactions('transaccionesv2.csv',sep=',',format = 'basket')
+ 
+```
+####	Descripción general de las reglas obtenidas (incluya al menos un gráfico) 
+
+##### Visualización de las 3 mejores reglas (según confianza) - grafo
+```{r fig.align='center'}
+   tresMejoresReglasv2 <- head(mejoresReglasv2,n=3,by='lift')
+   plot(tresMejoresReglasv2,method = 'graph',engine = 'htmlwidget')
+```
+##### Visualización de  3 reglas - gráfico paracoord
+```{r}
+# graficar 10 reglas individuales para observar lhs y rhs
+  Top3v2<-head(mejoresReglasv2,n=3,by='confidence')
+  plot(Top3v2,method ='paracoord')
+```
+
+
+#### Evaluación de los modelos 
+
+#####	Muestre e interprete las mejores 3 reglas de cada conjunto generado 
+
+Las mejores reglas al utilizar todas las siguientes:
+
+```{r}
+inspect(Top3v2)
+```
