--- a/05_Mineria_De_Datos/Tarea3/Tarea3.Rmd
+++ b/05_Mineria_De_Datos/Tarea3/Tarea3.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Tarea 3"
-author: "Jose Aguilar, Eilyn Salazer, Crisia Piedra"
+author: "Jose Aguilar, Eilyn Salazar, Crisia Piedra"
 date: "May 6, 2020"
 output: 
   html_document: 
