--- a/05_Mineria_De_Datos/Tarea3/Tarea3.Rmd
+++ b/05_Mineria_De_Datos/Tarea3/Tarea3.Rmd
@@ -220,7 +220,7 @@ Vamos a utilizar un soporte del 0.1 (10%) para filtrar los items que tienen una 
   #inspect(reglasFinal[1:10])
   
   # se ordena por soporte y se observan las primeras 10 reglas
-  inspect(sort(reglasFinal,by='lift',decreasing = TRUE)[0:10])
+  inspect(sort(reglasFinal,by='lift',decreasing = TRUE)[1:10])
   
   # se filtran las reglas con confianza superior a 0.25
   mejoresReglas<- reglasFinal[quality(reglasFinal)$confidence>0.90]
@@ -233,11 +233,19 @@ Vamos a utilizar un soporte del 0.1 (10%) para filtrar los items que tienen una 
 ####	Descripción general de las reglas obtenidas (incluya al menos un gráfico) 
 
 ##### Visualización de las 3 mejores reglas (según confianza) - grafo
+
+La visualización a través del grafo, nos permite apreciar como las variables MedioAmbiente=No y Hobbies=No
+se relacionan con las 3 reglas más fuertes, en la sección "Evaluación de los modelos" brindará más detalle
+de las interpretaciones de cada regla.
+
 ```{r fig.align='center'}
    tresMejoresReglas<- head(mejoresReglas,n=3,by='lift')
    plot(tresMejoresReglas,method = 'graph',engine = 'htmlwidget')
 ```
 ##### Visualización de  3 reglas - gráfico paracoord
+
+El siguiente gráfico nos permite apreciar que hay una relación fuerte entre los items Hobbies=No y MedioAmbiente=No
+
 ```{r}
 # graficar 10 reglas individuales para observar lhs y rhs
   Top3<-head(mejoresReglas,n=3,by='confidence')
@@ -254,6 +262,18 @@ Las mejores reglas al utilizar todas las siguientes:
 ```{r}
 inspect(Top3)
 ```
+ 
+ Como se puede apreciar en la tabla anterior las 3 mejores reglas del modelo nos permiten identificar
+ que caracteristicas pueden ayudarnos a identificar si una persona no tiene hobbies.
+ 
+ * Regla 1: En el caso de la regla 1 hay un 93% de probabilidad de que si la persona no tiene familia y 
+ no pertenece a un grupo de apoyo al medio ambiente, implica que la persona no tiene hobbies.
+ 
+ * Regla 2:En el caso de la regla 2 hay un 91.33% de probabilidad de que si la persona ha vivido durante un periodo largo, es mujer y no pertenece a un grupo de apoyo al medio ambiente, implica que la persona no tiene hobbies.
+ 
+ * Regla 3:Y la regla 3 indica que hay un 90.66% de probabilidad de que si la persona no pertenece a un grupo de apoyo al medio ambiente y contestó rápido la encuesta, implica que la persona no tiene hobbies.
+
+Como se puede apreciar de las 3 reglas es posible extraer que en todos los casos, si las personas no pertenecen a un grupo de apoyo al medio ambiente hay una alta probabilidad a que tengan hobbies.
 
 
 ### Modelo 2
@@ -273,8 +293,7 @@ Para el segundo modelo se utiliza un soporte más bajo de 0.02(2%), la confianza
   subconjuntosv2<- which(colSums(is.subset(reglasv2,reglasv2))>1)
   
   reglasFinalv2 <- reglasv2[-subconjuntosv2]
-  #inspect(reglasFinal[1:10])
-  
+
   # se ordena por soporte y se observan las primeras 3 reglas
   inspect(sort(reglasFinalv2,by='lift',decreasing = TRUE)[1:3])
   
@@ -291,11 +310,15 @@ Para el segundo modelo se utiliza un soporte más bajo de 0.02(2%), la confianza
 ####	Descripción general de las reglas obtenidas (incluya al menos un gráfico) 
 
 ##### Visualización de las 3 mejores reglas (según confianza) - grafo
+
+Mediante el gráfico 2 es posible observar que al flexibilizar los parámetros del modelo, se incluyen en las reglas items que no tienen un soporte tan alto en comparación con el modelo 1.
 ```{r fig.align='center'}
    tresMejoresReglasv2 <- head(mejoresReglasv2,n=3,by='lift')
    plot(tresMejoresReglasv2,method = 'graph',engine = 'htmlwidget')
 ```
 ##### Visualización de  3 reglas - gráfico paracoord
+
+El siguiente gráfico nos permite apreciar que hay una relación fuerte entre los items Hobbies=Si y MedioAmbiente=Si
 ```{r}
 # graficar 10 reglas individuales para observar lhs y rhs
   Top3v2<-head(mejoresReglasv2,n=3,by='confidence')
@@ -312,3 +335,9 @@ Las mejores reglas al utilizar todas las siguientes:
 ```{r}
 inspect(Top3v2)
 ```
+* Regla 1: En el caso de la regla 1 del segundo modelo, en principio esta regla indican que sin importar la característica (individual) en LHS, en el RHS vendrá GrupoApoyo=No
+
+* Regla 2: La regla 2 nos indica que hay un 79%.62 de confianza que si la persona tiene Hobbies, entonces la probabilidad de que también pertenezca a un grupo de medio ambiente es de 1.9 veces.
+
+* Regla 3: La regla 3 nos indica que si la persona tiene familia, contestó la encuesta en un periodo de tiempo lento, y tiene hobbies implica que hay un 73.71% probabilidad de que no sea profesional. 
+
